# antns

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  README.md  RFC-ANT-DNS.md  index.html
.cargo/: config.toml
.github/workflows/: build.yml  release.yml
src/: constants.rs  lib.rs  main.rs  vault.rs  wallet.rs
src/cli/: keys.rs  mod.rs  names.rs  records.rs  server.rs
src/crypto/: ed25519.rs  keypair.rs  mod.rs
src/register/: create.rs  history.rs  lookup.rs  mod.rs  update.rs
src/server/: dns.rs  http.rs  mod.rs  resolver_setup.rs
src/storage/: chunks.rs  local.rs  mod.rs
