[package]
name = "antns"
version = "0.1.0"
edition = "2021"
authors = ["AntNS Contributors"]
description = "Decentralized domain name system for the Autonomi network"
license = "GPL-3.0"

[dependencies]
# Autonomi client
autonomi = { path = "../autonomi/autonomi" }
ant-protocol = { path = "../autonomi/ant-protocol" }

# Cryptography
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
bls = { package = "blsttc", version = "8.0.1" }
hex = "0.4"
rand = "0.8"
ring = "0.17"
rpassword = "7.3"

# CLI
clap = { version = "4.5", features = ["derive"] }

# DNS Server
hickory-dns = "0.24"
hickory-server = "0.24"
hickory-proto = "0.24"

# HTTP Proxy
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.5"

# Storage
directories = "5.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Utilities
xor_name = "5.0"
chrono = "0.4"
async-trait = "0.1"

[[bin]]
name = "antns"
path = "src/main.rs"

[lib]
name = "antns"
path = "src/lib.rs"
